@@ -10,9 +10,6 @@ Gem::Specification.new do |s|
 
   s.files        = Dir.glob("{spec,lib}/**/*") + %w(README.rdoc HISTORY Rakefile)
   s.require_path = 'lib'
-  %w(activesupport i18n).each do |dep| # i18n needed for activesupport date extensions
-    s.add_dependency dep
-  end
 
   s.add_development_dependency 'rspec', '>= 2.0.0.beta.16'
   s.add_development_dependency 'timecop'
