@@ -31,8 +31,8 @@ describe Kronic do
   should_parse(:today,        date(:today))
   should_parse('today',       date(:today))
   should_parse('  Today',     date(:today))
-  should_parse('Yesterday',   date(:today) - 1.day)
-  should_parse('Tomorrow',    date(:today) + 1.day)
+  should_parse('Yesterday',   date(:today) - 1)
+  should_parse('Tomorrow',    date(:today) + 1)
   should_parse('Last Monday', date(:last_monday))
   should_parse('This Monday', date(:next_monday))
   should_parse('4 Sep',       date(:sep_4))
@@ -46,8 +46,8 @@ describe Kronic do
   should_parse('14 June oen', nil)
 
   should_format('Today',       date(:today))
-  should_format('Yesterday',   date(:today) - 1.day)
-  should_format('Tomorrow',    date(:today) + 1.day)
+  should_format('Yesterday',   date(:today) - 1)
+  should_format('Tomorrow',    date(:today) + 1)
   should_format('Last Monday', date(:last_monday))
   should_format('This Monday', date(:next_monday))
   should_format('14 September 2008', Date.new(2008, 9, 14))
