@@ -1,3 +1,6 @@
+Unreleased
+  * Removed dependency on active_support, no external dependencies!
+
 0.2.0
   * Support "tomorrow"
   * Support "this monday"
